--- a/src/app/modules/admin/components/telegram/stat-data-change-subscriptions/stat-data-cache-records.component.html
+++ b/src/app/modules/admin/components/telegram/stat-data-change-subscriptions/stat-data-cache-records.component.html
@@ -1,4 +1,4 @@
-<app-page-header>Подписки на обновления зарплат</app-page-header>
+<app-page-header>Подписки на обновления</app-page-header>
 
 <div class="container my-5" *ngIf="items; else dataLoading">
   <div class="card">
@@ -18,7 +18,7 @@
             <th>Название</th>
             <th>Chat</th>
             <th>Специальности</th>
-            <th>Не отправлять, если нет изменений</th>
+            <th>No pushes</th>
             <th>Создано</th>
             <th>Обновлено</th>
             <th>Удалено</th>
