--- a/src/app/modules/admin/components/admin-start-page/components/rating-page/rating-page.component.html
+++ b/src/app/modules/admin/components/admin-start-page/components/rating-page/rating-page.component.html
@@ -5,5 +5,8 @@
       <i class="star" [class.filled]="i < averageRating">★</i>
     </ng-container>
   </div>
-  <div class="h5 mt-1">{{ averageRating.toFixed(1) }}</div>
+  <div class="mt-1">
+    <span class="h5">{{ averageRating.toFixed(2) }}</span>
+    <span class="text-muted small">({{ count }})</span>
+  </div>
 </div>
