--- a/src/app/modules/companies/components/companies-page/companies-page.component.html
+++ b/src/app/modules/companies/components/companies-page/companies-page.component.html
@@ -1,68 +1,41 @@
-<app-page-header>Мои заметки</app-page-header>
+<app-page-header>Компании</app-page-header>
 
-<div class="container my-5" *ngIf="interviews; else dataLoading">
+<div class="container my-5" *ngIf="companies; else dataLoading">
   <div class="card">
     <div class="card-body">
-      <div
-        class="table-responsive"
-        *ngIf="interviews.length > 0; else nothingToShow"
-      >
-        <table class="table table-hover">
-          <thead>
-            <th>#</th>
-            <th>Кандидат</th>
-            <th>Грейд</th>
-            <th>Темы</th>
-            <th>Лейблы</th>
-            <th>Обновлено</th>
-            <th></th>
-          </thead>
-          <tbody>
-            <tr *ngFor="let item of interviews; let i = index">
-              <td>{{ i + 1 }}</td>
-              <td>{{ item.candidateName }}</td>
-              <td>
-                <app-developer-grade-label
-                  [grade]="item.candidateGrade"
-                ></app-developer-grade-label>
-              </td>
-              <td>{{ item.subjects?.length ?? 0 }}</td>
-              <td>
-                <app-label
-                  *ngFor="let label of item.labels"
-                  [label]="label"
-                ></app-label>
-              </td>
-              <td>{{ item.updatedAt | date: "yyyy-MM-dd HH:mm" }}</td>
-              <td class="small">
-                <a routerLink="/interviews/{{ item.id }}" class="btn-link-sm"
-                  >Открыть</a
-                >
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-    </div>
-  </div>
-</div>
-
-<ng-template #dataLoading>
-  <div class="container mt-5">
-    <app-data-loader></app-data-loader>
-  </div>
-</ng-template>
-
-<ng-template #nothingToShow>
-  <div class="card">
-    <div class="card-body">
-      <div class="text-center">Еще нет заметок.</div>
-
-      <div class="text-center mt-3">
-        <a routerLink="/interviews/create" class="btn btn-primary">
-          <i class="bi bi-plus-circle"></i> Начать интервью</a
+      <div *ngIf="companies.length > 0; else nothingToShow">
+        <div
+          *ngFor="let item of companies; let i = index"
+          class="mb-5"
+          (click)="navigateToCompany(item.id)"
         >
+          <div class="h5">{{ item.name }}</div>
+          <div class="small">{{ item.description }}</div>
+        </div>
+      </div>
+
+      <div class="mt-5" *ngIf="source && source.results.length > 0">
+        <app-pagination-buttons
+          [source]="source"
+          (pageChange)="loadData($event)"
+        ></app-pagination-buttons>
       </div>
     </div>
   </div>
-</ng-template>
+
+  <ng-template #dataLoading>
+    <div class="container mt-5">
+      <app-data-loader></app-data-loader>
+    </div>
+  </ng-template>
+
+  <ng-template #nothingToShow>
+    <div class="card">
+      <div class="card-body">
+        <div class="text-center">
+          Еще нет ни одной компании, о которой можно было бы оставить отзыв.
+        </div>
+      </div>
+    </div>
+  </ng-template>
+</div>
