--- a/src/app/modules/admin/components/companies/company-admin-page/company-admin-page.component.html
+++ b/src/app/modules/admin/components/companies/company-admin-page/company-admin-page.component.html
@@ -2,16 +2,65 @@
 
 <div class="container my-5" *ngIf="company; else dataLoading">
   <div class="card">
-    <div class="card-body">
+    <div class="card-body p-5">
       <div class="mb-5">
-        <div>{{ company.description }}</div>
-        <div>{{ company.links }}</div>
-        <div>{{ company.logoUrl }}</div>
-        <div>{{ company.reviewsCount }}</div>
-        <div>{{ company.rating }}</div>
-        <div>{{ company.createdAt | date: "yyyy-MM-dd HH:mm" }}</div>
-        <div>{{ company.updatedAt | date: "yyyy-MM-dd HH:mm" }}</div>
+        <div class="row mb-3">
+          <div class="col-md-3">
+            Описание
+          </div>
+          <div class="col-md-9">
+            {{ company.description }}
+          </div>
+        </div>
+
+        <div class="row mb-3">
+          <div class="col-md-3">
+            Ссылки
+          </div>
+          <div class="col-md-9">
+            {{ company.links }}
+          </div>
+        </div>
+
+        <div class="row mb-3">
+          <div class="col-md-3">
+            Логотип
+          </div>
+          <div class="col-md-9">
+            {{ company.logoUrl }}
+          </div>
+        </div>
+
+        <div class="row mb-3">
+          <div class="col-md-3">
+            Кол-во отзывов
+          </div>
+          <div class="col-md-9">
+            {{ company.reviewsCount }}
+          </div>
+        </div>
+
+        <div class="row mb-3">
+          <div class="col-md-3">
+            Рейтинг
+          </div>
+          <div class="col-md-9">
+            {{ company.rating }}
+          </div>
+        </div>
+
+        <div class="row mb-3">
+          <div class="col-md-3">
+            Даты
+          </div>
+          <div class="col-md-9">
+            <div>Создана: {{ company.createdAt | date: "yyyy-MM-dd HH:mm" }}</div>
+            <div>Обновление: {{ company.updatedAt | date: "yyyy-MM-dd HH:mm" }}</div>
+          </div>
+        </div>
       </div>
+
+      <hr />
 
       <div
         class="table-responsive mt-5"
@@ -20,21 +69,21 @@
         <table class="table table-hover">
           <thead>
             <th>#</th>
-            <th>Название</th>
-            <th>Рейтинг</th>
-            <th>Кол-во отзывов</th>
-            <th>Создана</th>
-            <th>Обновлена</th>
+            <th>Среднее</th>
+            <th>Плюсы</th>
+            <th>Минусы</th>
+            <th>Статус</th>
+            <th>Создано</th>
             <th></th>
           </thead>
           <tbody>
             <tr *ngFor="let item of company.reviews; let i = index">
               <td>{{ i + 1 }}</td>
-              <td>{{ item.name }}</td>
-              <td>{{ item.rating }}</td>
-              <td>{{ item.reviewsCount }}</td>
+              <td>{{ item.totalRating }}</td>
+              <td>{{ item.pros?.length ?? "-" }}</td>
+              <td>{{ item.cons?.length ?? "-" }}</td>
+              <td></td>
               <td>{{ item.createdAt | date: "yyyy-MM-dd HH:mm" }}</td>
-              <td>{{ item.updatedAt | date: "yyyy-MM-dd HH:mm" }}</td>
               <td class="small"></td>
             </tr>
           </tbody>
@@ -43,6 +92,12 @@
     </div>
   </div>
 </div>
+
+<ng-template #nothingToShow>
+  <div class="text-center">
+    Еще нет отзывов.
+  </div>
+</ng-template>
 
 <ng-template #dataLoading>
   <div class="container mt-5">
