--- a/src/app/modules/companies/components/company-page/company-page.component.html
+++ b/src/app/modules/companies/components/company-page/company-page.component.html
@@ -1,47 +1,26 @@
-<app-page-header>Мои заметки</app-page-header>
+<app-page-header>{{ company?.name }}</app-page-header>
 
-<div class="container my-5" *ngIf="interviews; else dataLoading">
+<div class="container my-5" *ngIf="company; else dataLoading">
   <div class="card">
-    <div class="card-body">
-      <div
-        class="table-responsive"
-        *ngIf="interviews.length > 0; else nothingToShow"
-      >
-        <table class="table table-hover">
-          <thead>
-            <th>#</th>
-            <th>Кандидат</th>
-            <th>Грейд</th>
-            <th>Темы</th>
-            <th>Лейблы</th>
-            <th>Обновлено</th>
-            <th></th>
-          </thead>
-          <tbody>
-            <tr *ngFor="let item of interviews; let i = index">
-              <td>{{ i + 1 }}</td>
-              <td>{{ item.candidateName }}</td>
-              <td>
-                <app-developer-grade-label
-                  [grade]="item.candidateGrade"
-                ></app-developer-grade-label>
-              </td>
-              <td>{{ item.subjects?.length ?? 0 }}</td>
-              <td>
-                <app-label
-                  *ngFor="let label of item.labels"
-                  [label]="label"
-                ></app-label>
-              </td>
-              <td>{{ item.updatedAt | date: "yyyy-MM-dd HH:mm" }}</td>
-              <td class="small">
-                <a routerLink="/interviews/{{ item.id }}" class="btn-link-sm"
-                  >Открыть</a
-                >
-              </td>
-            </tr>
-          </tbody>
-        </table>
+    <div class="card-body p-5">
+      <div class="mb-5">
+        <div class="h5">О компании</div>
+        <div>{{ company.description }}</div>
+      </div>
+
+      <div *ngIf="company.links.length > 0" class="mb-5">
+        <div class="h5">Ссылки</div>
+        <div *ngFor="let link of company.links">
+          <a href="{{ link }}" target="_blank" class="btn btn-link">{{
+            link
+          }}</a>
+        </div>
+      </div>
+
+      <div *ngIf="company.reviews.length > 0; else nothingToShow" class="mb-5">
+        <hr class="my-2" />
+        <div class="h5">Отзывы</div>
+        <div *ngFor="let review of company.reviews"></div>
       </div>
     </div>
   </div>
@@ -54,15 +33,15 @@
 </ng-template>
 
 <ng-template #nothingToShow>
-  <div class="card">
-    <div class="card-body">
-      <div class="text-center">Еще нет заметок.</div>
+  <hr class="my-2" />
+  <div class="text-center mt-3">Еще нет отзывов.</div>
 
-      <div class="text-center mt-3">
-        <a routerLink="/interviews/create" class="btn btn-primary">
-          <i class="bi bi-plus-circle"></i> Начать интервью</a
-        >
-      </div>
-    </div>
+  <div class="text-center mt-3">
+    <a
+      routerLink="/companies/{{ company?.id }}/add-review"
+      class="btn btn-outline-primary"
+    >
+      <i class="bi bi-plus-circle"></i> Написать отзыв</a
+    >
   </div>
 </ng-template>
