--- a/src/app/modules/companies/components/add-review-page/add-review-page.component.html
+++ b/src/app/modules/companies/components/add-review-page/add-review-page.component.html
@@ -1,68 +1,123 @@
-<app-page-header>Мои заметки</app-page-header>
+<app-page-header>Оставить отзыв о {{ company?.name }}</app-page-header>
 
-<div class="container my-5" *ngIf="interviews; else dataLoading">
+<div class="container my-5" *ngIf="company; else dataLoading">
   <div class="card">
     <div class="card-body">
-      <div
-        class="table-responsive"
-        *ngIf="interviews.length > 0; else nothingToShow"
+
+      <form
+        class="mb-5"
+        *ngIf="!!editForm"
+        [formGroup]="editForm"
+        (ngSubmit)="onEditFormSubmit()"
       >
-        <table class="table table-hover">
-          <thead>
-            <th>#</th>
-            <th>Кандидат</th>
-            <th>Грейд</th>
-            <th>Темы</th>
-            <th>Лейблы</th>
-            <th>Обновлено</th>
-            <th></th>
-          </thead>
-          <tbody>
-            <tr *ngFor="let item of interviews; let i = index">
-              <td>{{ i + 1 }}</td>
-              <td>{{ item.candidateName }}</td>
-              <td>
-                <app-developer-grade-label
-                  [grade]="item.candidateGrade"
-                ></app-developer-grade-label>
-              </td>
-              <td>{{ item.subjects?.length ?? 0 }}</td>
-              <td>
-                <app-label
-                  *ngFor="let label of item.labels"
-                  [label]="label"
-                ></app-label>
-              </td>
-              <td>{{ item.updatedAt | date: "yyyy-MM-dd HH:mm" }}</td>
-              <td class="small">
-                <a routerLink="/interviews/{{ item.id }}" class="btn-link-sm"
-                  >Открыть</a
-                >
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
+
+        <div class="row">
+
+          <div class="col-md-6">
+            <div class="mb-5">
+              <label class="fw-bold text-dark">Культура и ценности *</label>
+              <app-star-rating [maxValue]="5" (ratingChange)="editForm.setStarRating('cultureAndValues', $event)" />
+              <div class="text-muted small">Поставлена оценка: {{ editForm.getStarRating('cultureAndValues') }}</div>
+              <div class="text-muted small">Культура, атмосфера, ценности компании</div>
+              <app-field-error [field]="editForm.get('cultureAndValues')"></app-field-error>
+            </div>
+
+            <div class="mb-5">
+              <label class="fw-bold text-dark">Качество кода (опционально)</label>
+              <app-star-rating [maxValue]="5" (ratingChange)="editForm.setStarRating('codeQuality', $event)" />
+              <div class="text-muted small">Поставлена оценка: {{ editForm.getStarRating('codeQuality') }}</div>
+              <div class="text-muted small">Стандарты качества кода, принятые в компании. Поле опционально.</div>
+              <app-field-error [field]="editForm.get('codeQuality')"></app-field-error>
+            </div>
+
+            <div class="mb-5">
+              <label class="fw-bold text-dark">Work / Life баланс *</label>
+              <app-star-rating [maxValue]="5" (ratingChange)="editForm.setStarRating('workLifeBalance', $event)" />
+              <div class="text-muted small">Поставлена оценка: {{ editForm.getStarRating('workLifeBalance') }}</div>
+              <div class="text-muted small">Как соблюдается баланс между работой и личной жизнью.</div>
+              <app-field-error [field]="editForm.get('workLifeBalance')"></app-field-error>
+            </div>
+          </div>
+
+          <div class="col-md-6">
+            <div class="mb-5">
+              <label class="fw-bold text-dark">Компенсация и бенефиты *</label>
+              <app-star-rating [maxValue]="5" (ratingChange)="editForm.setStarRating('compensationAndBenefits', $event)" />
+              <div class="text-muted small">Поставлена оценка: {{ editForm.getStarRating('compensationAndBenefits') }}</div>
+              <div class="text-muted small">Насколько компенсация соответствует требованиям.</div>
+              <app-field-error [field]="editForm.get('compensationAndBenefits')"></app-field-error>
+            </div>
+
+            <div class="mb-5">
+              <label class="fw-bold text-dark">Карьерные возможности *</label>
+              <app-star-rating [maxValue]="5" (ratingChange)="editForm.setStarRating('careerOpportunities', $event)" />
+              <div class="text-muted small">Поставлена оценка: {{ editForm.getStarRating('careerOpportunities') }}</div>
+              <div class="text-muted small">Внутренне развитие сотрудников, возможность построить карьеру.</div>
+              <app-field-error [field]="editForm.get('careerOpportunities')"></app-field-error>
+            </div>
+
+            <div class="mb-5">
+              <label class="fw-bold text-dark">Менеджмент *</label>
+              <app-star-rating [maxValue]="5" (ratingChange)="editForm.setStarRating('management', $event)" />
+              <div class="text-muted small">Поставлена оценка: {{ editForm.getStarRating('management') }}</div>
+              <div class="text-muted small">Управленческие решения, требования к сотрудникам, руководство.</div>
+              <app-field-error [field]="editForm.get('management')"></app-field-error>
+            </div>
+
+          </div>
+        </div>
+
+        <div class="mb-3">
+          <label class="fw-bold text-success">Какие плюсы работать здесь?</label>
+          <textarea class="form-control" formControlName="pros"></textarea>
+          <app-field-error [field]="editForm.get('pros')"></app-field-error>
+        </div>
+
+        <div class="mb-3">
+          <label class="fw-bold text-danger">Какие минусы работать здесь?</label>
+          <textarea class="form-control" formControlName="cons"></textarea>
+          <app-field-error [field]="editForm.get('cons')"></app-field-error>
+        </div>
+
+        <div class="mb-3">
+          <label class="fw-bold text-dark">Я работаю здесь сейчас:</label>
+          <div class="form-check d-inline-block ms-3">
+            <input class="form-check-input cursor-pointer" type="checkbox" formControlName="iWorkHere" />
+            <label class="form-check-label">Да</label>
+          </div>
+        </div>
+
+        <div class="mb-3">
+          <label class="fw-bold text-dark">Я работаю/работал на компанию по формату *</label>
+          <select class="form-control" formControlName="userEmployment">
+            <option *ngFor="let option of options" [value]="option.item">
+              {{ option.label }}
+            </option>
+          </select>
+          <app-field-error [field]="editForm.get('userEmployment')"></app-field-error>
+        </div>
+
+        <div class="mb-3 fst-italic text-muted">
+          * - обязательное поле
+        </div>
+
+        <div class="mb-3 d-flex justify-content-between">
+          <button class="btn btn-outline-secondary" type="button" (click)="cancel()">Вернуться к компании</button>
+          <button class="btn btn-primary" type="submit">Сохранить отзыв</button>
+        </div>
+      </form>
+      
     </div>
   </div>
 </div>
 
+<app-confirm-dialog
+  *ngIf="confirmCancelMessage"
+  [message]="confirmCancelMessage"
+></app-confirm-dialog>
+
 <ng-template #dataLoading>
   <div class="container mt-5">
     <app-data-loader></app-data-loader>
-  </div>
-</ng-template>
-
-<ng-template #nothingToShow>
-  <div class="card">
-    <div class="card-body">
-      <div class="text-center">Еще нет заметок.</div>
-
-      <div class="text-center mt-3">
-        <a routerLink="/interviews/create" class="btn btn-primary">
-          <i class="bi bi-plus-circle"></i> Начать интервью</a
-        >
-      </div>
-    </div>
   </div>
 </ng-template>
