--- a/src/app/shared/components/star-rating-readonly/star-rating-readonly.component.html
+++ b/src/app/shared/components/star-rating-readonly/star-rating-readonly.component.html
@@ -1,5 +1,11 @@
-<div class="rating" *ngIf="source">
-  <ng-container *ngFor="let star of stars; let i = index">
-    <i class="star" [class.filled]="i < source">★</i>
+<div class="star-container">
+  <ng-container *ngFor="let star of fullStars">
+    <i class="bi bi-star-fill star-full"></i>
+  </ng-container>
+
+  <i *ngIf="hasHalfStar" class="bi bi-star-half star-full"></i>
+
+  <ng-container *ngFor="let star of emptyStars">
+    <i class="bi bi-star star-full"></i>
   </ng-container>
 </div>
