--- a/src/app/modules/companies/components/company-page/company-page.component.html
+++ b/src/app/modules/companies/components/company-page/company-page.component.html
@@ -91,7 +91,7 @@
                     ></app-star-rating-readonly>
                   </div>
 
-                  <div *ngIf="review.codeQuality" class="mb-2">
+                  <div class="mb-2">
                     <span>Карьерные возможности</span>
                     <app-star-rating-readonly
                       [source]="review.careerOpportunities"
