--- a/src/app/modules/companies/components/companies-page/companies-page.component.scss
+++ b/src/app/modules/companies/components/companies-page/companies-page.component.scss
@@ -7,6 +7,7 @@
   padding-top: 16px;
   padding-bottom: 16px;
   border: 1px solid #e0e0e0;
+  color: rgb(33, 37, 41);
 
   &:hover {
     transform: scale(1.05);
@@ -15,5 +16,5 @@
 }
 
 .company-list {
-  padding: 16 24px;
+  padding: 16px 24px;
 }
