--- a/src/app/modules/admin/components/companies/company-admin-page/company-admin-page.component.html
+++ b/src/app/modules/admin/components/companies/company-admin-page/company-admin-page.component.html
@@ -39,7 +39,7 @@
         <div class="row mb-3">
           <div class="col-md-3">Кол-во отзывов</div>
           <div class="col-md-9">
-            {{ company.reviewsCount }}
+            {{ company.reviews?.length ?? company.reviewsCount }}
           </div>
         </div>
 
